--- a/tree_density.ipynb
+++ b/tree_density.ipynb
@@ -301,6 +301,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "sl_record = pd.read_csv('output_files/tree_records_prelim.csv')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -309,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -320,21 +331,44 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([196001, 196002, 196003, ..., 212301, 212302, 212303])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "temp = np.where(np.isnan(sl_record['block'])==True)[0]\n",
+    "temp[np.where(temp>195990)[0]]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "sl_record.loc[i, 'block'] = None\n",
-    "sl_record.loc[i, 'tract'] = None\n",
-    "sl_record.loc[i, 'geoid'] = None\n",
-    "sl_record.loc[i, 'blockgroup'] = None"
+    "#sl_record.loc[i, 'block'] = None\n",
+    "#sl_record.loc[i, 'tract'] = None\n",
+    "#sl_record.loc[i, 'geoid'] = None\n",
+    "#sl_record.loc[i, 'blockgroup'] = None"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -344,107 +378,39 @@
      "output_type": "stream",
      "text": [
       "212304\n",
-      "0 0:00:02.893599\n",
-      "100 0:02:26.204687\n",
-      "200 0:02:10.428990\n",
-      "300 0:02:14.718893\n",
-      "400 0:02:14.028638\n",
-      "500 0:02:29.313050\n",
-      "600 0:01:59.143584\n",
-      "700 0:02:15.821953\n",
-      "800 0:02:28.403488\n",
-      "900 0:02:13.602576\n",
-      "1000 0:02:27.509093\n",
-      "1100 0:01:58.080060\n",
-      "1200 0:01:45.315669\n",
-      "1300 0:02:00.668711\n",
-      "1400 0:02:07.493672\n",
-      "1600 0:03:47.908297\n",
-      "1700 0:02:34.826596\n",
-      "1800 0:02:20.303334\n",
-      "1900 0:01:34.636094\n",
-      "2000 0:01:59.159586\n",
-      "2100 0:02:11.855618\n",
-      "2200 0:02:24.346633\n",
-      "2300 0:02:16.136168\n",
-      "2400 0:02:39.718886\n",
-      "2500 0:02:25.011911\n",
-      "2600 0:02:32.351667\n",
-      "2700 0:02:31.876770\n",
-      "2800 0:02:16.256783\n",
-      "2900 0:02:23.257063\n",
-      "3000 0:02:27.250820\n",
-      "3100 0:02:35.996246\n",
-      "3200 0:02:28.776729\n",
-      "3300 0:02:25.318540\n",
-      "3400 0:02:41.024538\n",
-      "3500 0:02:36.861081\n",
-      "3600 0:02:27.679608\n",
-      "3700 0:02:04.346031\n",
-      "3800 0:02:16.122209\n",
-      "3900 0:02:23.264048\n",
-      "4000 0:02:24.281530\n",
-      "4100 0:01:55.875857\n",
-      "4200 0:01:37.662995\n",
-      "4300 0:02:21.095719\n",
-      "4400 0:02:06.546926\n",
-      "4500 0:01:51.208555\n",
-      "4600 0:02:28.739189\n",
-      "4700 0:02:24.032239\n",
-      "4800 0:02:17.651837\n",
-      "4900 0:01:56.597177\n",
-      "5100 0:03:29.829801\n",
-      "5200 0:02:11.381021\n",
-      "5300 0:02:05.060330\n",
-      "5400 0:02:16.928127\n",
-      "5500 0:02:15.779656\n",
-      "5600 0:02:04.856259\n",
-      "5700 0:02:10.267387\n",
-      "5800 0:02:18.704026\n",
-      "5900 0:02:27.687674\n",
-      "6000 0:01:58.944141\n",
-      "6100 0:02:08.273125\n",
-      "6200 0:02:20.240724\n",
-      "6300 0:02:02.079569\n",
-      "6400 0:02:05.879826\n",
-      "6500 0:01:44.540410\n",
-      "6600 0:02:11.069052\n",
-      "6700 0:02:02.575538\n",
-      "6800 0:02:06.423685\n",
-      "6900 0:01:08.609482\n",
-      "7000 0:01:45.525745\n",
-      "7100 0:01:46.899166\n",
-      "7200 0:01:58.205336\n",
-      "7300 0:01:53.379822\n",
-      "7400 0:01:36.448849\n",
-      "7500 0:01:55.114415\n",
-      "7600 0:02:10.293365\n",
-      "7700 0:02:15.552318\n",
-      "7800 0:01:59.057112\n",
-      "7900 0:02:09.120050\n",
-      "8000 0:02:04.168919\n",
-      "8100 0:01:55.008682\n",
-      "8200 0:02:13.606760\n",
-      "8300 0:01:58.771278\n",
-      "8400 0:02:03.293461\n",
-      "8500 0:02:03.693845\n",
-      "8600 0:02:00.949093\n",
-      "8700 0:01:47.710262\n",
-      "8800 0:02:11.915026\n",
-      "8900 0:01:55.981199\n",
-      "9000 0:01:56.913971\n",
-      "9100 0:01:56.191346\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'address1' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-11-e67d4910b616>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     14\u001b[0m             \u001b[0;32mexcept\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m                 \u001b[0;32mif\u001b[0m \u001b[0mn_attempts\u001b[0m\u001b[0;34m>=\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 16\u001b[0;31m                     \u001b[0;32mprint\u001b[0m \u001b[0;34m'bad in try1 '\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0maddress1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     17\u001b[0m                     \u001b[0;32mbreak\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'address1' is not defined"
+      "196000 Time Diff:  0:00:02.777757 Finish Time:  2016-09-23 00:30:06.589853\n",
+      "196500 Time Diff:  0:09:55.551513 Finish Time:  2016-09-23 00:40:02.141595\n",
+      "197000 Time Diff:  0:10:20.984046 Finish Time:  2016-09-23 00:50:23.126057\n",
+      "197500 Time Diff:  0:09:42.101438 Finish Time:  2016-09-23 01:00:05.227722\n",
+      "198000 Time Diff:  0:10:00.683636 Finish Time:  2016-09-23 01:10:05.911565\n",
+      "198500 Time Diff:  0:09:57.761249 Finish Time:  2016-09-23 01:20:03.673025\n",
+      "199000 Time Diff:  0:09:56.211225 Finish Time:  2016-09-23 01:29:59.884461\n",
+      "199500 Time Diff:  0:09:41.685271 Finish Time:  2016-09-23 01:39:41.569938\n",
+      "200000 Time Diff:  0:10:24.059957 Finish Time:  2016-09-23 01:50:05.630166\n",
+      "200500 Time Diff:  0:12:10.722595 Finish Time:  2016-09-23 02:02:16.352980\n",
+      "201000 Time Diff:  0:09:34.912292 Finish Time:  2016-09-23 02:11:51.265628\n",
+      "201500 Time Diff:  0:09:31.777058 Finish Time:  2016-09-23 02:21:23.042901\n",
+      "202000 Time Diff:  0:09:53.959543 Finish Time:  2016-09-23 02:31:17.002652\n",
+      "202500 Time Diff:  0:09:56.180518 Finish Time:  2016-09-23 02:41:13.183384\n",
+      "203000 Time Diff:  0:09:36.349113 Finish Time:  2016-09-23 02:50:49.532690\n",
+      "203500 Time Diff:  0:09:31.294611 Finish Time:  2016-09-23 03:00:20.827514\n",
+      "204000 Time Diff:  0:09:57.019148 Finish Time:  2016-09-23 03:10:17.846930\n",
+      "204500 Time Diff:  0:10:01.492866 Finish Time:  2016-09-23 03:20:19.340006\n",
+      "205000 Time Diff:  0:09:57.775852 Finish Time:  2016-09-23 03:30:17.116183\n",
+      "205500 Time Diff:  0:09:54.297754 Finish Time:  2016-09-23 03:40:11.414138\n",
+      "206000 Time Diff:  0:10:02.492720 Finish Time:  2016-09-23 03:50:13.907067\n",
+      "206500 Time Diff:  0:09:48.331208 Finish Time:  2016-09-23 04:00:02.238481\n",
+      "207000 Time Diff:  0:10:08.165862 Finish Time:  2016-09-23 04:10:10.404605\n",
+      "207500 Time Diff:  0:09:53.629650 Finish Time:  2016-09-23 04:20:04.034519\n",
+      "208000 Time Diff:  0:09:34.871502 Finish Time:  2016-09-23 04:29:38.906228\n",
+      "208500 Time Diff:  0:10:13.487881 Finish Time:  2016-09-23 04:39:52.394409\n",
+      "209000 Time Diff:  0:09:56.102072 Finish Time:  2016-09-23 04:49:48.496807\n",
+      "209500 Time Diff:  0:09:58.666885 Finish Time:  2016-09-23 04:59:47.163910\n",
+      "210000 Time Diff:  0:09:09.845227 Finish Time:  2016-09-23 05:08:57.009355\n",
+      "210500 Time Diff:  0:10:05.092506 Finish Time:  2016-09-23 05:19:02.102078\n",
+      "211000 Time Diff:  0:10:10.362812 Finish Time:  2016-09-23 05:29:12.465082\n",
+      "211500 Time Diff:  0:09:59.140469 Finish Time:  2016-09-23 05:39:11.606024\n",
+      "212000 Time Diff:  0:09:51.384474 Finish Time:  2016-09-23 05:49:02.990724\n"
      ]
     }
    ],
@@ -453,7 +419,7 @@
     "\n",
     "print len(sl_record)\n",
     "\n",
-    "for i in range(9156, 10000): \n",
+    "for i in range(196000, len(sl_record)): \n",
     "    if ((sl_record.loc[i,'lon']!=0.0) \n",
     "        & (np.isnan(sl_record.loc[i,'lon'])==False)) :\n",
     "        n_attempts = 0\n",
@@ -476,7 +442,7 @@
     "                    sl_record.loc[i, 'geoid'] = temp['GEOID']\n",
     "                    sl_record.loc[i, 'blockgroup'] = temp['BLKGRP']\n",
     "\n",
-    "                if (i % 100 == 0): \n",
+    "                if (i % 500 == 0): \n",
     "                    finish = datetime.datetime.now()\n",
     "                    print i, 'Time Diff: ', finish-start, 'Finish Time: ', finish\n",
     "                    start = datetime.datetime.now()\n",
@@ -506,13 +472,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "#sl_record.to_csv('output_files/tree_records_prelim.csv', index=False)"
+    "sl_record.to_csv('output_files/tree_records_all.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import gmplot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "gmap = gmplot.GoogleMapPlotter(32.715736, -117.161087, 10.5)\n",
+    "#gmap = gmplot.from_geocode(\"San Diego\")\n",
+    "gmap.heatmap(sl_record['lat'], sl_record['lon'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "gmap.draw(\"mymap.html\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import gmplot\n",
+    "\n",
+    "gmap = gmplot.GoogleMapPlotter(37.428, -122.145, 16)\n",
+    "\n",
+    "gmap.plot(latitudes, longitudes, 'cornflowerblue', edge_width=10)\n",
+    "gmap.scatter(more_lats, more_lngs, '#3B0B39', size=40, marker=False)\n",
+    "gmap.scatter(marker_lats, marker_lngs, 'k', marker=True)\n",
+    "gmap.heatmap(heat_lats, heat_lngs)\n",
+    "\n",
+    "gmap.draw(\"mymap.html\")"
    ]
   },
   {
@@ -1025,7 +1055,122 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "tree_individual['tree_count'] = 1.0\n",
+    "\n",
+    "tree_bg1 = tree_individual[['tract', 'blockgroup', 'tree_count']].groupby(['tract', 'blockgroup'], as_index=False).agg('count')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "tree_individual['tree_count'] = 1.0\n",
+    "\n",
+    "tree_bg1 = tree_individual[['tract', 'blockgroup', 'tree_count']].groupby(['tract', 'blockgroup'], as_index=False).agg('count')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "tree_bg['tree_density'] = tree_bg['tree_count'] / tree_bg['land_area']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "tree_bg.to_csv('tree_bg.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "column_choice = 'tree_density'\n",
+    "#column_choice = 'Estimate; Total'\n",
+    "\n",
+    "p1 = Proj(\"+init=EPSG:2230\", preserve_units=True)\n",
+    "\n",
+    "fig,ax = plt.subplots(1,1, figsize=(20,20))\n",
+    "patches = []\n",
+    "for i in range(0,len(bg_info2)): \n",
+    "    barf = pd.DataFrame(shapes2[i].points)\n",
+    "    poly = plt.Polygon(barf[[0,1]], fc='none', ec='k', alpha=0.7, lw=1.0)\n",
+    "    patches.append(poly)\n",
+    "    #plt.gca().add_patch(poly)\n",
+    "\n",
+    "colors = census_trimmed[column_choice]\n",
+    "\n",
+    "p = PatchCollection(patches, cmap=cmaps.viridis, alpha=1.0)\n",
+    "p.set_array(np.array(colors))\n",
+    "#p.set_clim([min(colors),0.40])\n",
+    "p.set_clim([min(colors),max(colors)])\n",
+    "\n",
+    "ax.add_collection(p)\n",
+    "\n",
+    "patches1 = []\n",
+    "for i in range(0,len(bg_info2)): \n",
+    "    #col_values.append(census_trimmed.loc[i, column_choice])\n",
+    "    barf = pd.DataFrame(shapes2[i].points)\n",
+    "    if (census_trimmed.loc[i, 'count']<10): \n",
+    "        poly = plt.Polygon(barf[[0,1]], fc='none', ec='r', alpha=0.7, lw=0.9)\n",
+    "\n",
+    "    patches1.append(poly)\n",
+    "    plt.gca().add_patch(poly)\n",
+    "    stringer = (bg_info2.loc[i,'tract'].astype(str) + '   ' \n",
+    "                + bg_info2.loc[i,'blockgroup'].astype(str))\n",
+    "    #plt.annotate(stringer, xy=(float(bg_info2.loc[i,11]), float(bg_info2.loc[i,10])))\n",
+    "\n",
+    "\"\"\"    \n",
+    "patches = []\n",
+    "for i in range(32,33): \n",
+    "    print i\n",
+    "    temp = pd.DataFrame(mc_shapes[i].points)\n",
+    "    lon, lat = p1(np.array(temp.loc[0:33632, 0]), np.array(temp.loc[0:33632, 1]), inverse=True)\n",
+    "    poly = plt.Polygon(np.transpose([lon,lat]), fc='none', ec='r', alpha=1.0, lw=3.0, zorder=3)\n",
+    "    patches.append(poly)\n",
+    "    plt.gca().add_patch(poly)\n",
+    "\"\"\"\n",
+    "\n",
+    "plt.axis('scaled')\n",
+    "plt.minorticks_on()\n",
+    "\n",
+    "cbar = plt.colorbar(p, fraction=0.046, pad=0.04, shrink=1.0).set_label(label='tree density',\n",
+    "                                                                       size=15)\n",
+    "\n",
+    "plt.xlabel('Longitude', fontsize=16)\n",
+    "plt.ylabel('Latitude', fontsize=16)\n",
+    "plt.ylim(32.533541,33.116178)\n",
+    "#plt.ylim(32.70,32.72)\n",
+    "\n",
+    "plt.xlim(-117.31,-116.85)\n",
+    "#plt.xlim(-117.2,-117.1)\n",
+    "\n",
+    "\n",
+    "#plt.show()\n",
+    "\n",
+    "#plt.savefig('output_figures/graffiti_per_map.png', bbox_inches='tight')\n",
+    "#mpld3.display()\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
