updated data details

--- a/data_organiser.ipynb
+++ b/data_organiser.ipynb
@@ -2,6 +2,13 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data Processing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
@@ -46,6 +53,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Street Light Analysis\n",
+    "\n",
+    "### streetlight_density.ipynb\n",
+    "\n",
+    "#### - sl_records_all.csv\n",
+    "    - Lists every street light and it's associated latitude and longitude \n",
+    "    - Also lists its tract and block group\n",
+    "\n",
+    "#### - sdcounty_sldistance.csv\n",
+    "    - Puts 250 random points in each block group and measures the distance between those random points and the nearest street light to get a sense of how the graffiti/dumping-streetlight distance compares.\n",
+    "    - Looks like the median and mean distance of these events from a street light is smaller than the distance associated with random points... Harrumph."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Arrest Record Processing\n",
     "\n",
     "### police_calls.ipynb\n",
@@ -57,6 +81,24 @@
     "\n",
     "#### - police_arrests_bg.csv\n",
     "    - Number of police arrests for each tract/blockgroup"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Tree Distribution Processing: \n",
+    "\n",
+    "Downloaded information of all the public trees in San Diego. Note that this information doesn't include Balboa park for some reason (?!). \n",
+    "\n",
+    "### tree_density.ipyb\n",
+    "\n",
+    "#### - tree_records_all.csv\n",
+    " - Has geocoded information for each individual tree\n",
+    " - Also has lat/long\n",
+    "\n",
+    "#### - tree_bg.csv\n",
+    " - Tree information sorted by blockgroup"
    ]
   },
   {
@@ -73,21 +115,18 @@
     "\n",
     "#### - census_trimmed_xxxx.csv\n",
     "    - Organised by blockgroup\n",
-    "    - Has age breakdowns, race breakdowns, median age by "
+    "    - Has age breakdowns, race breakdowns\n",
+    "    - Median age, income, home value, etc. \n",
+    "    - Also has fraction of households with limited english"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "outputs": [],
    "source": []
   }
  ],
